# trexio-hs

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  flake.nix  trexio-hs.cabal
.github/workflows/: nix.yml  ubuntu.yml
nix/: overlay.nix
src/: TREXIO.hs
src-int/TREXIO/Internal/: Base.hsc
src/TREXIO/: CooArray.hs  HighLevel.hs  LowLevel.hs
src/TREXIO/HighLevel/: Records.hs
src/TREXIO/Internal/: Marshaller.hs  TH.hs
src/TREXIO/LowLevel/: Scheme.hs
test/: trexio-test.hs
